unpackaged/main/default/objects/PagesApi__Media_Asset__c/PagesApi__Media_Asset__c.object-meta.xml
<CustomObject>
    <description>Upload documents, photographs, animations, videos, music, stylesheets, and javascript files for use in any Fonteva Community.</description>
    <label>Media Asset</label>
    <nameField>
        <label>Asset ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Media</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>