unpackaged/main/default/objects/PagesApi__Media_Asset__c/fields/OrderApi__Display_Order__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Display_Order__c</fullName>
    <description>Controls the order in which the images display in the Store.</description>
    <inlineHelpText>Controls the order in which the images display in the Store.</inlineHelpText>
    <label>RESERVED</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>