unpackaged/main/default/objects/PagesApi__Media_Asset__c/fields/OrderApi__Is_Default__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Is_Default__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, this is the item&#39;s default image.</description>
    <inlineHelpText>When checked, this is the item&#39;s default image.</inlineHelpText>
    <label>RESERVED</label>
    <type>Checkbox</type>
</CustomField>