unpackaged/main/default/objects/PagesApi__Media_Asset__c/fields/OrderApi__Item__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Image applicable to selected item.</description>
    <inlineHelpText>Image applicable to selected item.</inlineHelpText>
    <label>RESERVED</label>
    <referenceTo>OrderApi__Item__c</referenceTo>
    <relationshipLabel>Media Assets</relationshipLabel>
    <relationshipName>Media_Assets</relationshipName>
    <type>Lookup</type>
</CustomField>