unpackaged/main/default/objects/PagesApi__Media_Asset__c/fields/PagesApi__Download_Link__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Download_Link__c</fullName>
    <description>Download the asset (opens new tab based on browser settings and behavior).</description>
    <formula>HYPERLINK( PagesApi__Path__c , &quot;Click to Download&quot;, &quot;_tab&quot; )</formula>
    <inlineHelpText>Download the asset (opens new tab based on browser settings and behavior).</inlineHelpText>
    <label>Download Link</label>
    <type>Text</type>
</CustomField>