unpackaged/main/default/objects/PagesApi__Media_Asset__c/fields/PagesApi__Extension__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Extension__c</fullName>
    <description>** System Calculated Required ** The extension of the file.</description>
    <inlineHelpText>** System Calculated Required ** The extension of the file.</inlineHelpText>
    <label>Extension</label>
    <length>255</length>
    <type>Text</type>
</CustomField>