unpackaged/main/default/objects/PagesApi__Media_Asset__c/fields/PagesApi__Filename__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Filename__c</fullName>
    <description>** Required ** The name of the file.</description>
    <inlineHelpText>** Required ** The name of the file.</inlineHelpText>
    <label>Filename</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>