unpackaged/main/default/objects/PagesApi__Media_Asset__c/fields/PagesApi__Media_Asset_Collection__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Media_Asset_Collection__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the Media Asset Collection Object, acts as a grouping parent</description>
    <inlineHelpText>Group the similar Media Assets into one by selecting the right Collection</inlineHelpText>
    <label>Media Asset Collection</label>
    <referenceTo>PagesApi__Media_Asset_Collection__c</referenceTo>
    <relationshipLabel>Media Assets</relationshipLabel>
    <relationshipName>Media_Assets</relationshipName>
    <type>Lookup</type>
</CustomField>