unpackaged/main/default/objects/PagesApi__Media_Asset__c/fields/PagesApi__MIME_Type__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__MIME_Type__c</fullName>
    <description>** System Calculated ** MIME types form a standard way of classifying file types on the Internet. The MIME Type of the related asset is required.</description>
    <inlineHelpText>** System Calculated ** MIME types form a standard way of classifying file types on the Internet. The MIME Type of the related asset is required.</inlineHelpText>
    <label>MIME Type</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>