unpackaged/main/default/objects/PagesApi__Media_Asset__c/fields/PagesApi__Path__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Path__c</fullName>
    <description>The location of the media asset.</description>
    <inlineHelpText>The location of the media asset.</inlineHelpText>
    <label>Path</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>