unpackaged/main/default/objects/PagesApi__Media_Asset__c/fields/PagesApi__Short_Description__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Short_Description__c</fullName>
    <description>Short description about the image that has been uploaded</description>
    <inlineHelpText>A short description about the image to show up in components like Carousels, etc</inlineHelpText>
    <label>Short Description</label>
    <type>TextArea</type>
</CustomField>