unpackaged/main/default/objects/PagesApi__Media_Asset__c/fields/PagesApi__Title__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Title__c</fullName>
    <description>The title for the media asset</description>
    <inlineHelpText>80 character String that can mainly serve as a title when the asset is used in sites, pages, etc</inlineHelpText>
    <label>Title</label>
    <length>80</length>
    <type>Text</type>
</CustomField>