unpackaged/main/default/objects/PagesApi__Media_Asset__c/listViews/PagesApi__All.listView-meta.xml
<ListView>
    <fullName>PagesApi__All</fullName>
    <columns>NAME</columns>
    <columns>PagesApi__Filename__c</columns>
    <columns>PagesApi__MIME_Type__c</columns>
    <columns>PagesApi__Path__c</columns>
    <columns>PagesApi__Title__c</columns>
    <columns>PagesApi__Short_Description__c</columns>
    <columns>PagesApi__Download_Link__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>